# coding_test

./: Copy_of_speech_to_text_with_GUI.ipynb  README.md  ocr_test.py  output.txt  reddit_proed_pt1.ipynb
Coursera_assignments/: DV_with_Python_final_assignment.ipynb  Data_Analysis_with_Python_final_assignment.ipynb  ML_with_Python_final_assignment.ipynb
OCR/: README.md  pyproject.toml  requirements.txt
Reddit_scraping/: README.md  reddit_proed_part2.ipynb  reddit_proed_part3.ipynb  reddit_proed_pt1.ipynb  reddit_scraping.ipynb
STT_with_GUI/: README.md  speech_to_text_with_GUI.ipynb  speechtotext.kv  streaming_result.txt
Youtube_scraping/: README.md  scraping_lofi_comments_part1.ipynb  scraping_lofi_comments_part2.ipynb
