[tool.poetry]
name = "coding_test"
version = "0.1.0"
description = ""
authors = ["Maho Takahashi <mtakahas@ucsd.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
pytesseract = "^0.3.8"
click = "^8.0.3"
pyenchant = "^3.2.2"
numpy = "1.20.1"
opencv-python = "4.5.4.60"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
